--- a/main.css
+++ b/main.css
@@ -7,18 +7,27 @@ body {
     max-height: 12rem;
 }
 
-.wireframes img {
+.desktop img {
     max-height: 28rem;
     max-width: 20rem;
     display: inline-block;
+    padding: 10px 0;
+}
+
+.mobile {
+    text-align: center;
+}
+
+.mobile img {
+    padding: 10px 10px;
 }
 
 img {
+    margin: auto;
     padding: 0;
     display: block;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
     max-height: 100%;
     max-width: 100%;
 }
