--- a/main.css
+++ b/main.css
@@ -5,7 +5,15 @@
 body {
     margin: auto;
     text-align: center;
-    padding: 1rem 5rem;
+}
+
+header {
+    padding: 30px;
+    text-align: center;
+    background: #FDF9E8;
+    color: black;
+    font-size: 30px;
+    font-family: 'Cheap Pine';
 }
 
 .logo img {
@@ -20,6 +28,7 @@ body {
     padding: 3rem;
 }
 
+
 .filter button {
     font-family: 'DIN Medium';
     font-size: 25px;
@@ -31,7 +40,8 @@ body {
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    /*    margin: 5rem;*/
+    margin: 0 2rem;
+    /* responsive media query*/
     transition-duration: 0.4s;
 }
 
@@ -57,12 +67,12 @@ body {
     text-align: center;
     font-family: 'DIN Medium';
     font-size: 16px;
+    line-height: 1rem;
 }
 
 h2 {
-    padding: 10px 2px;
     font-family: 'BrandonPrinted-Two';
-    font-size: 18px;
+    font-size: 20px;
 }
 
 h1 {
@@ -73,31 +83,43 @@ h3 {
     font-family: 'DIN Medium';
 }
 
-p,
-ul {
-    font-family: 'Miso';
-    font-size: 20px;
-    line-height: 1.5rem;
-}
-
 .card-content img {
     max-width: 15rem;
     border-radius: 50%;
 }
 
+.cards img {
+    display: flex;
+    justify-content: space-between;
+    vertical-align: middle;
+    display: inline-block;
+}
+
 .copyright {
     padding-top: 2rem;
+    padding: 20px;
+    text-align: center;
+    background: #FDF9E8;
 }
 
 .up p {
     text-align: center;
     display: block;
     margin: auto;
+    font-family: 'DIN Medium';
+    font-size: 12px;
+
 }
 
 .search {
     float: right;
-    margin: .4rem 0;
+    line-height: 1.5rem;
+    color: grey;
+}
+
+.search button {
+    border: none;
+    color: grey;
 }
 
 .search button:hover {
@@ -106,22 +128,20 @@ ul {
 
 /* Recipe Page */
 
-/*
-.recipeHero img {
-    max-width: 30rem;
-    margin: auto;
-    display: block;
-}
-*/
-
 .titleDesc h1,
 h3,
 p,
 ul {
     text-align: left;
-    display: block;
-    max-width: 25rem;
-    margin-left: auto;
+    max-width: 45rem;
+    margin: auto;
+}
+
+p,
+ul {
+    font-family: 'Miso';
+    font-size: 22px;
+    line-height: 1.5rem;
 }
 
 .titleDesc img {
@@ -129,14 +149,14 @@ ul {
     padding-right: 1rem;
     max-width: 30rem;
     display: inline;
+    margin-top: 2rem;
 }
 
 .wrapper {
     width: 900px;
     max-width: 100%;
-    margin-left: auto;
-    margin-right: auto;
     display: grid;
+    margin: auto;
 }
 
 .ingredients img {
@@ -170,15 +190,97 @@ ul {
 .home img {
     max-width: 5rem;
     float: left;
+    margin: 5px 10px;
 }
 
 @media (min-width: 1281px) {
     .cards {
-        padding: 0 15rem;
+        padding: 0 18rem;
     }
 }
 
-/* 
-  ##Device = Laptops, Desktops
-  ##Screen = B/w 1025px to 1280px
-*/
+@media (max-width: 768px) {
+
+    /* For mobile phones: */
+    .filter button {
+        margin: auto;
+    }
+}
+
+
+.button img {
+    max-width: 2rem;
+    margin-top: 5rem;
+    cursor: pointer;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+}
+
+.overlay:target {
+    visibility: visible;
+    opacity: 1;
+}
+
+.popup {
+    margin: 18rem auto;
+    padding: 50px;
+    background: #fff;
+    border-radius: 20px;
+    max-width: 30rem;
+    position: relative;
+    transition: all 0.5s ease-in-out;
+}
+
+.popup h2 {
+    margin-top: 0;
+    color: #333;
+    font-family: 'DIN Medium';
+    font-size: 18px;
+    max-width: 20rem;
+    margin: auto;
+    line-height: 1.3rem;
+
+}
+
+.popup h1 {
+    font-size: 22px;
+}
+
+.popup .close {
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    transition: all 200ms;
+    text-decoration: none;
+    color: #333;
+}
+
+.popup .close:hover {
+    color: #BE2B2B;
+}
+
+.popup .content {
+    max-height: 30%;
+    overflow: auto;
+}
+
+.popup .content img {
+    max-width: 10rem;
+}
+
+@media screen and (max-width: 700px) {
+
+    .popup {
+        width: 70%;
+    }
+}
