--- a/main.css
+++ b/main.css
@@ -1,33 +1,23 @@
+/*Main*/
+
 * {
     box-sizing: border-box;
 }
 
 body {
-    margin: auto;
-    text-align: center;
-}
-
-header {
-    padding: 30px;
-    text-align: center;
-    background: #FDF9E8;
-    color: black;
-    font-size: 30px;
-    font-family: 'Cheap Pine';
-}
-
-.logo img {
     display: block;
     margin: auto;
-    max-width: 12rem;
+}
+
+.indexwrap {
+    text-align: center;
 }
 
 .filter {
     margin: auto;
     text-align: center;
-    padding: 3rem;
+    padding: 2rem;
 }
-
 
 .filter button {
     font-family: 'DIN Medium';
@@ -41,14 +31,7 @@ header {
     text-decoration: none;
     display: inline-block;
     margin: 0 2rem;
-    /* responsive media query*/
     transition-duration: 0.4s;
-}
-
-.filter button:hover {
-    background-color: #be2b2b;
-    color: white;
-    cursor: pointer;
 }
 
 .card {
@@ -96,10 +79,10 @@ h3 {
 }
 
 .copyright {
-    padding-top: 2rem;
-    padding: 20px;
+    padding: 5px;
     text-align: center;
     background: #FDF9E8;
+    text-align: center;
 }
 
 .up p {
@@ -126,92 +109,98 @@ h3 {
     cursor: pointer;
 }
 
-/* Recipe Page */
 
-.titleDesc h1,
-h3,
-p,
-ul {
-    text-align: left;
-    max-width: 45rem;
+
+.filter button:hover {
+    background-color: #be2b2b;
+    color: white;
+    cursor: pointer;
+}
+
+
+.logo img {
+    display: block;
     margin: auto;
+    max-width: 8rem;
 }
 
-p,
-ul {
-    font-family: 'Miso';
-    font-size: 22px;
-    line-height: 1.5rem;
+.logo h1 {
+    font-size: 40px;
+    padding-top: 1rem;
 }
 
-.titleDesc img {
-    float: left;
-    padding-right: 1rem;
-    max-width: 30rem;
-    display: inline;
-    margin-top: 2rem;
+/*Recipe Page*/
+
+header {
+    padding: 10px;
+    background: #FDF9E8;
 }
+
 
 .wrapper {
-    width: 900px;
-    max-width: 100%;
-    display: grid;
+    padding: 0 1.5rem;
     margin: auto;
 }
 
-.ingredients img {
-    float: right;
-    padding-left: 1rem;
-    max-width: 25rem;
-    display: inline;
-}
-
-.ingredients ul {
-    float: left;
-    display: block;
-    margin-right: auto;
-}
-
-.instructions p {
-    margin: auto;
-    padding: 1.5rem;
-}
-
-.search img {
-    float: top right;
-    max-width: 20px;
-}
-
-.help img {
-    padding-top: 2rem;
-    max-width: 30px;
+img {
+    max-width: 27rem;
 }
 
 .home img {
     max-width: 5rem;
-    float: left;
-    margin: 5px 10px;
+    float: top-left;
 }
 
-@media (min-width: 1281px) {
-    .cards {
-        padding: 0 18rem;
-    }
+.plateimg img {
+    max-width: 27rem;
+    margin-top: 1rem;
 }
 
-@media (max-width: 768px) {
-
-    /* For mobile phones: */
-    .filter button {
-        margin: auto;
-    }
+.platetext h1 {
+    margin-bottom: 0rem;
+    font-family: 'BrandonPrinted-Two';
+    font-size: 26px;
 }
 
+.platetext h3 {
+    margin-top: .5rem;
+    font-family: 'DIN Medium';
+    font-size: 20px;
+}
 
-.button img {
+.platetext p,
+ul {
+    font-family: 'Miso';
+    font-size: 20px;
+    line-height: 1.3rem;
+}
+
+ul {
+    list-style-type: square;
+}
+
+.ingredients img {
+    max-width: 27rem;
+}
+
+.ingredients h2 {
+    font-family: 'BrandonPrinted-Two';
+    font-size: 20px;
+    text-align: center;
+}
+
+/*Help Popup */
+
+.box {
+    padding: 10px;
+    background: #FDF9E8;
+    width: 100%;
+}
+
+.box img {
     max-width: 2rem;
-    margin-top: 5rem;
-    cursor: pointer;
+    margin: auto;
+    display: block;
 }
 
 .overlay {
@@ -232,8 +221,8 @@ ul {
 }
 
 .popup {
-    margin: 18rem auto;
-    padding: 50px;
+    margin: 16rem 5rem;
+    padding: 30px;
     background: #fff;
     border-radius: 20px;
     max-width: 30rem;
@@ -245,15 +234,18 @@ ul {
     margin-top: 0;
     color: #333;
     font-family: 'DIN Medium';
-    font-size: 18px;
+    font-size: 16px;
     max-width: 20rem;
     margin: auto;
     line-height: 1.3rem;
-
+    text-align: center;
+    padding-bottom: .5rem;
 }
 
 .popup h1 {
+    font-family: 'BrandonPrinted-Two';
     font-size: 22px;
+    text-align: center;
 }
 
 .popup .close {
@@ -269,18 +261,134 @@ ul {
     color: #BE2B2B;
 }
 
-.popup .content {
-    max-height: 30%;
-    overflow: auto;
-}
-
-.popup .content img {
+.content img {
     max-width: 10rem;
+    padding: 0 3rem;
 }
 
-@media screen and (max-width: 700px) {
+/*Media Queries*/
 
-    .popup {
-        width: 70%;
+@media (max-width: 768px) {
+    .filter button {
+        margin: auto;
     }
+}
+
+
+@media (min-width: 1024px) {
+    .wrapper {
+        width: 950px;
+        max-width: 100%;
+        margin: auto;
+    }
+
+    .instructions h2 {
+        display: block;
+        margin: auto;
+        font-size: 22px;
+    }
+
+    img {
+        max-width: 35rem;
+    }
+
+    .plateimg img {
+        max-width: 35rem;
+        float: left;
+        padding-right: 2rem;
+        display: inline;
+        margin-top: 2rem;
+    }
+
+    .platetext h1 {
+        margin-bottom: 0rem;
+        font-family: 'BrandonPrinted-Two';
+        font-size: 26px;
+        text-align: left;
+        margin: auto;
+        padding-top: 2rem;
+        margin-bottom: .5rem;
+    }
+
+    .platetext h3 {
+        margin-top: .3rem;
+        font-family: 'DIN Medium';
+        font-size: 20px;
+        text-align: left;
+        margin: auto;
+        margin-bottom: .5rem;
+    }
+
+    .platetext p,
+    .platetext ul {
+        font-family: 'Miso';
+        font-size: 22px;
+        line-height: 1.3rem;
+        margin: auto;
+        max-width: 60rem;
+        margin-top: 1rem;
+    }
+
+    .ingredients img {
+        float: right;
+        padding-left: 1rem;
+        max-width: 25rem;
+        display: inline;
+    }
+
+    .ingredients ul {
+        float: left;
+        display: block;
+        margin-right: auto;
+    }
+
+    .instructions h2 {
+        padding: 1.3rem 0;
+    }
+
+    .ingredients {
+        padding-top: 18rem;
+    }
+
+    .instructions {
+        padding-top: 18rem;
+    }
+
+}
+
+@media (min-width: 1170px) {
+    .cards {
+        padding: 0 18rem;
+    }
+}
+
+@media (max-width: 768px) {
+
+    /* For mobile phones: */
+    .filter button {
+        margin: auto;
+    }
+}
+
+/*Instructions*/
+
+.instructions h2 {
+    font-family: 'BrandonPrinted-Two';
+    font-size: 20px;
+    text-align: center;
+}
+
+.instructions p {
+    max-width: 45rem;
+    display: block;
+    margin: auto;
+    font-family: 'Miso';
+    font-size: 20px;
+    line-height: 1.3rem;
+    padding: 1.5rem 0;
+}
+
+.instructions img {
+    display: block;
+    margin: auto;
 }
