--- a/fontsheet.css
+++ b/fontsheet.css
@@ -3,9 +3,9 @@
 }
 
 @font-face {
-    font-family: font-family: 'DIN Medium';
+    font-family: 'DIN Medium';
 }
 
 @font-face {
-    font-family: font-family: font-family: 'Miso';
+    font-family: 'Miso';
 }
