--- a/fontsheet.css
+++ b/fontsheet.css
@@ -17,3 +17,4 @@
         src: url('miso-lig-webfont.woff2') format('woff2'), url('miso-lig-webfont.woff') format('woff');
         font-weight: normal;
         font-style: normal;
+    }
