--- a/main.css
+++ b/main.css
@@ -1,5 +1,26 @@
 /*Main*/
 
+@font-face {
+    font-family: 'brandon_printedtwo';
+    src: url('fonts/brandonprinted-two-webfont.woff2') format('woff2'), url('brandonprinted-two-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'din_mediumregular';
+    src: url('din_medium_regular-webfont.woff2') format('woff2'), url('fonts/din_medium_regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'misoregular';
+    src: url('miso-regular-webfont.woff2') format('woff2'), url('fonts/miso-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -20,7 +41,7 @@ body {
 }
 
 .filter button {
-    font-family: 'DIN Medium';
+    font-family: 'din_mediumregular';
     font-size: 25px;
     background-color: white;
     border: 2px solid #be2b2b;
@@ -48,22 +69,22 @@ body {
 .card-mins,
 .card-cals {
     text-align: center;
-    font-family: 'DIN Medium';
+    font-family: 'din_mediumregular';
     font-size: 16px;
     line-height: 1rem;
 }
 
 h2 {
-    font-family: 'BrandonPrinted-Two';
+    font-family: 'brandon_printedtwo';
     font-size: 20px;
 }
 
 h1 {
-    font-family: 'BrandonPrinted-Two';
+    font-family: 'brandon_printedtwo';
 }
 
 h3 {
-    font-family: 'DIN Medium';
+    font-family: 'din_mediumregular';
 }
 
 .card-content img {
@@ -89,7 +110,7 @@ h3 {
     text-align: center;
     display: block;
     margin: auto;
-    font-family: 'DIN Medium';
+    font-family: 'din_mediumregular';
     font-size: 12px;
 }
 
@@ -154,19 +175,19 @@ img {
 
 .platetext h1 {
     margin-bottom: 0rem;
-    font-family: 'BrandonPrinted-Two';
+    font-family: 'brandon_printedtwo';
     font-size: 26px;
 }
 
 .platetext h3 {
     margin-top: .5rem;
-    font-family: 'DIN Medium';
+    font-family: 'din_mediumregular';
     font-size: 20px;
 }
 
 .platetext p,
 ul {
-    font-family: 'Miso';
+    font-family: 'misoregular';
     font-size: 20px;
     line-height: 1.3rem;
 }
@@ -180,7 +201,7 @@ ul {
 }
 
 .ingredients h2 {
-    font-family: 'BrandonPrinted-Two';
+    font-family: 'brandon_printedtwo';
     font-size: 20px;
     text-align: center;
 }
@@ -232,7 +253,7 @@ ul {
 .popup h2 {
     margin-top: 0;
     color: #333;
-    font-family: 'DIN Medium';
+    font-family: 'din_mediumregular';
     font-size: 16px;
     max-width: 20rem;
     margin: auto;
@@ -242,7 +263,7 @@ ul {
 }
 
 .popup h1 {
-    font-family: 'BrandonPrinted-Two';
+    font-family: 'brandon_printedtwo';
     font-size: 22px;
     text-align: center;
 }
@@ -301,7 +322,7 @@ ul {
 
     .platetext h1 {
         margin-bottom: 0rem;
-        font-family: 'BrandonPrinted-Two';
+        font-family: 'brandon_printedtwo';
         font-size: 26px;
         text-align: left;
         margin: auto;
@@ -311,7 +332,7 @@ ul {
 
     .platetext h3 {
         margin-top: .3rem;
-        font-family: 'DIN Medium';
+        font-family: 'din_mediumregular';
         font-size: 20px;
         text-align: left;
         margin: auto;
@@ -320,7 +341,7 @@ ul {
 
     .platetext p,
     .platetext ul {
-        font-family: 'Miso';
+        font-family: 'misoregular';
         font-size: 22px;
         line-height: 1.3rem;
         margin: auto;
@@ -378,7 +399,7 @@ ul {
 /*Instructions*/
 
 .instructions h2 {
-    font-family: 'BrandonPrinted-Two';
+    font-family: 'brandon_printedtwo';
     font-size: 20px;
     text-align: center;
 }
@@ -387,7 +408,7 @@ ul {
     max-width: 45rem;
     display: block;
     margin: auto;
-    font-family: 'Miso';
+    font-family: 'misoregular';
     font-size: 20px;
     line-height: 1.3rem;
     padding: 1.5rem 0;
