--- a/main.css
+++ b/main.css
@@ -55,14 +55,24 @@ body {
     transition-duration: 0.4s;
 }
 
+.cards {}
+
 .card {
-    text-align: center;
-    max-width: 18rem;
-    max-height: 30rem;
+    /*    text-align: center;*/
+    max-width: 320px;
+    /*    max-height: 30rem;*/
     background-color: white;
     cursor: pointer;
-    display: inline-block;
+    display: inline-grid;
     padding: 10px;
+    /*    float: left;*/
+}
+
+.card img {
+    max-width: 320px;
+    border-radius: 50%;
+    max-width: 15rem;
+    padding-bottom: 1rem;
 }
 
 .card-subtitle,
@@ -70,13 +80,19 @@ body {
 .card-cals {
     text-align: center;
     font-family: 'din_mediumregular';
-    font-size: 16px;
-    line-height: 1rem;
+    font-size: 15px;
+    /*    line-height: 1rem;*/
+    max-width: 15rem;
 }
 
-h2 {
+.card-mins {
+    margin-top: .6rem;
+}
+
+.card-title {
     font-family: 'brandon_printedtwo';
-    font-size: 20px;
+    font-size: 15px;
+    max-width: 15rem;
 }
 
 h1 {
@@ -93,10 +109,11 @@ h3 {
 }
 
 .cards img {
-    display: flex;
-    justify-content: space-between;
-    vertical-align: middle;
-    display: inline-block;
+    /*    max-width: 15rem;*/
+    /*    display: flex;*/
+    /*    justify-content: space-between;*/
+    /*    vertical-align: top;*/
+    /*    display: inline-block;*/
 }
 
 .copyright {
@@ -161,6 +178,7 @@ header {
 
 img {
     max-width: 27rem;
+    margin: auto;
 }
 
 .home img {
@@ -377,7 +395,7 @@ ul {
 
 @media (min-width: 1170px) {
     .cards {
-        padding: 0 18rem;
+        padding: 0 20rem;
     }
 }
 
@@ -417,4 +435,8 @@ ul {
 .instructions img {
     display: block;
     margin: auto;
+}
+
+.card p {
+    height: 1.2rem;
 }
