--- a/main.css
+++ b/main.css
@@ -131,15 +131,24 @@ h3 {
     font-size: 12px;
 }
 
+.search input {
+    border: none;
+    margin-left: 5px;
+}
+
 .search {
     float: right;
     line-height: 1.5rem;
+    border: 1px solid lightgray;
     color: grey;
+    border-radius: 10px;
+    background-color: white;
 }
 
 .search button {
     border: none;
     color: grey;
+    border-radius: 10px;
 }
 
 .search button:hover {
